# PrintVault_MCP

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
docs/: design.md
docs/reference/: API_CONTRACT.md
src/print_vault_mcp/: __init__.py  __main__.py  client.py  formatters.py  server.py
