[project]
name = "print-vault-mcp"
version = "0.1.0"
description = "MCP server for Print Vault — AI-powered 3D printing inventory management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
print-vault-mcp = "print_vault_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/print_vault_mcp"]
